<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.movie.MovieDetailActivity">

    <ProgressBar
        android:id="@+id/pb_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark"
        android:indeterminateTint="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_loading"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pb_detail"
        app:layout_constraintVertical_bias="0.8" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/cl_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_poster"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:maxHeight="500dp"
                android:scaleType="fitXY"
                android:src="@color/colorImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_item_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal_normal"
                android:maxLines="1"
                android:text="@string/tv_item_title"
                android:textColor="@color/colorText"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/tv_item_rating"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_item_rating" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_item_release"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal_normal"
                android:text="@string/tv_item_release"
                android:textColor="@color/colorText"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_item_rating"
                app:layout_constraintEnd_toStartOf="@+id/tv_item_rating"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_title" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_item_rating"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="@dimen/margin_horizontal_normal"
                android:layout_marginTop="@dimen/margin_vertical_normal"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:text="@string/tv_item_rating"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_poster">

            </com.google.android.material.textview.MaterialTextView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_item_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal_normal"
                android:layout_marginTop="@dimen/margin_vertical_normal"
                android:text="@string/tv_item_overview"
                android:textColor="@color/colorText"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_release" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_item_overview_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal_normal"
                android:text="@string/tv_item_overview_value"
                android:textColor="@color/colorText"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_overview" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
